# core_db

./: .gitignore  CONTRIBUTING.md  NEXT_STEPS.md  README.md  installer.sh  logs.txt  pyproject.toml  pyrightconfig.json  setup.sh
.github/workflows/: ci.yml
db/: .env  .gitignore.old  .pgpass.bak  connect_coredb.sh
db/commands/: connect_db.sh  dump_data.sh  init_locally.sh
db/init/: V1_schema_dev.sql
db/init-scripts/: V1_schema_dev.sql
deploy/: compose.yml  docker-compose.yml  logs.txt  requirements.txt
deploy/docker/: AlertEngine.Dockerfile  Backend.Dockerfile  Collector.Dockerfile  Processor.Dockerfile
docs/: 02-definition-of-done.md  04-architecture.md  mvp_execution.md
docs/plan/: 01-project-definition.md  02-definition-of-done.md  05-stack-decisions.md  06-concept-map.md  07-roadmap.md  08-security-red-vs-blue.md  09-execution.md  11-examples-and-testcases.md
docs/refs/: NEXT_STEPS.md  core-db-mini-problemas.md
misc/: NEXT_STEPS.md  all.md
project/db/: .env  .env_psql.sh  .exec.sh  .pgpass  connect_coredb.sh  docker-compose.yml  setup.sql
project/db/init-scripts/: V1_schema_dev.sql
project/docs/: 00-personal-context.md  01-project-definition.md  02-definition-of-done.md  03-daily-tools.md  04-architecture.md  08-security-red-vs-blue.md  09-execution.md  10-final-rules.md  11-examples-and-testcases.md
project/src/: main.py
project/src/alert_engine/: Dockerfile  alert_manager.py  main.py
project/src/backend/: Dockerfile  database.py  main.py
project/src/collector/: Dockerfile  collector.py
project/src/processor/: Dockerfile  processor.py
src/: app.py  pipeline.py  setup.py
src/alert_engine/: alert_manager.py  main.py
src/backend/: database.py
src/collector/: collector.py  main.py
src/contracts/: alerts.py  base_model.py  events.py
src/core/async/: async_manager.py
src/core/async_lib/: async_manager.py
src/core/backend/: database.py  events_service.py  main.py
src/core/db/: db_connection.py
src/logging_module/: main.py
src/processor/: main.py  processor.py
src/tests/: load_simulation.py  test_alert_manager.py  test_collector.py  test_integration.py  test_processor.py
systemd/: 3v3nTr4cer.service  setup.sh
(+11 files in other folders)
