[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core_db"
version = "0.1.0"
description = "CLI-first event pipeline for backend monitoring with security and audit logs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    {name =  "Rubén Martínez Agramunt"}
]

dependencies = [
    "fastapi==0.129.0",
    "uvicorn==0.41.0",
    "sqlalchemy==2.0.46",
    "sqlmodel==0.0.34",
    "asyncpg",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "anyio==4.12.1",
    "click==8.3.1",
]

[project.scripts]
core_db = "run_services:run_app"

[tool.setuptools.packages.find]
where = ["src"]